Revert "Change package name."
This reverts commit 8328cfe4aa799919df4fc1da9bb9c16ad8112252.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "paulgeneres/laravel-installer",
+    "name": "laravel/installer",
     "description": "Laravel application installer.",
     "keywords": ["laravel"],
     "license": "MIT",
